# ole

./: README.md  analyze.lua  consts.lua  dump.lua  instru.lua  metaooo.lua  ole.lua  postproc.lua
examples/NRs/: README  balanc_3_de  balanc_3_sVS_de  elmhes_10_de  elmhes_10_sVS_de  elmhes_11_de  elmhes_11_sVS_de  four1_2_me  hqr-sq_12_sVS_se  hqr-sq_12_se  hqr_15_se  lop_13_de  lop_13_sVS_de  ludcmp-sq_4_sVS_se  ludcmp-sq_4_se  matadd-flb_16_de  matadd-flb_16_sVS_de  mprove_8_me  mprove_8_sVS_me  mprove_9_de  mprove_9_sVS_de  ptr1_movaps_branch  realft_4_de  relax2_26_de  relax2_26_sVS_de  rstrct_29_de  rstrct_29_sVS_de  run_OLE.lua  s1244_sVS_se  s1244_se  s319_sVS_se  s319_se  svbksb_3_sVS_se  svbksb_3_se  svdcmp_11_de  svdcmp_11_sVS_de  svdcmp_13_de  svdcmp_13_sVS_de  svdcmp_14_de  svdcmp_14_sVS_de  (+9 more)
examples/NRs/maqao-ole_8-3-2019.balanc_3_de/: codelet.data  dump_1-U1.ooo  dump_1.ooo
examples/NRs/maqao-ole_8-3-2019.balanc_3_sVS_de/: codelet.data  dump_0-U1.ooo  dump_0.ooo
examples/NRs/maqao-ole_8-3-2019.elmhes_10_de/: dump_1.ooo  (+2 more)
examples/reduc/: Makefile  README  memopt  memopt.c  protos.h  reduc.c  reduc1.c  reduc10.c  reduc11.c  reduc2.c  reduc3.c  reduc4.c  reduc5.c  reduc6.c  reduc7.c  reduc8.c  reduc9.c
lib/: CMakeLists.txt
lib/runtime/: CMakeLists.txt
lib/runtime/ole/: bitwz.c  bitwz.h  consts.h  dump.c  dump.h  init.c  init.h  inst.c  inst.h  lru.h  ole.c  ole.h  plru.h  structs.h  trace.c  trace.h
lib/runtime/ole/lru/: Makefile  lru12.c  lru12.h  lru16.c  lru16.h  lru20.c  lru20.h  lru24.c  lru24.h  lru32.c  lru32.h  lru4.c  lru4.h  lru8.c  lru8.h
lib/runtime/ole/plru/: Makefile  find.h  plru12.c  plru12.h  plru16.c  plru16.h  plru20.c  plru20.h  plru24.c  plru24.h  plru32.c  plru32.h  plru4.c  plru4.h  plru8.c  plru8.h
(+166 files in other folders)
